errors.txt
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/NativePasskey.swift:32:28: error: 'init()' is unavailable
            let provider = ASAuthorizationPlatformPublicKeyCredentialProvider()
                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
AuthenticationServices.ASAuthorizationPlatformPublicKeyCredentialProvider:19:24: note: 'init()' has been explicitly marked unavailable here
    public convenience init()
                       ^
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/NativePasskey.swift:33:68: error: extra arguments at positions #2, #3 in call
            let request = provider.createCredentialAssertionRequest(challenge: challengeData, name: name, userID: userIDData)
                                                                   ^
AuthenticationServices.ASAuthorizationPlatformPublicKeyCredentialProvider:12:15: note: 'createCredentialAssertionRequest(challenge:)' declared here
    open func createCredentialAssertionRequest(challenge: Data) -> ASAuthorizationPlatformPublicKeyCredentialAssertionRequest
              ^
/Users/paulskie/Documents/godot-ios-extensions/Sources/Passkey/NativePasskey.swift:67:28: error: 'init()' is unavailable
            let provider = ASAuthorizationPlatformPublicKeyCredentialProvider()
                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
AuthenticationServices.ASAuthorizationPlatformPublicKeyCredentialProvider:19:24: note: 'init()' has been explicitly marked unavailable here
    public convenience init()